Konflikt Commit Lokal

--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,14 @@
 				<td>Test3VN</td>
 				<td>Test3NN</td>
 			</tr>
+			<tr>
+				<td>Test4VN</td>
+				<td>Test4NN</td>
+			</tr>
+			<tr>
+				<td>Test5VN</td>
+				<td>Test5NN</td>
+			</tr>
 		</table> 
     </body>
 </html>
