Konflikt Commit Zentral

--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,10 @@
 				<td>Test3VN</td>
 				<td>Test3NN</td>
 			</tr>
+			<tr>
+				<td>Test7VN</td>
+				<td>Test7NN</td>
+			</tr>
 		</table> 
     </body>
 </html>
